Updating spacing and the href link to achievements.html in nioh2.html.

--- a/nioh2/nioh2.html
+++ b/nioh2/nioh2.html
@@ -174,7 +174,7 @@
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Blacksmith</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Stone of Penance</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Farming Resources</a></li>
-                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Achievements</a></li>
+                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="https://liukang1080.github.io/gamewiki/nioh2/tools/achievements/achievements.html">Achievements</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Builds</a></li>
                         </ul>
                     </div>
@@ -268,22 +268,22 @@
             ========== -->
             <ul class="mt-5 w-full flex flex-col items-start justify-center gap-2">
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">Recommended Settings</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">Recommended Settings</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">Starting Recommendations</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">Starting Recommendations</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">Character Stats</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">Character Stats</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">The Shrine</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">The Shrine</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">The Dojo</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">The Dojo</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">NG+ Cycles</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">NG+ Cycles</a>
                 </li>
             </ul>
         </div>
@@ -305,25 +305,25 @@
             ========== -->
             <ul class="mt-5 w-full flex flex-col items-start justify-center gap-2">
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">Stances</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">Stances</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">Ki Pulse</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">Ki Pulse</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">Skills / Skill Trees</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">Skills / Skill Trees</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">Yokai Shift & Burst Counters</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">Yokai Shift & Burst Counters</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">Doding / Guarding / Parrying</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">Doding / Guarding / Parrying</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">Status Effects</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">Status Effects</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">Advanced Tech</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">Advanced Tech</a>
                 </li>
             </ul>
         </div>
@@ -345,34 +345,34 @@
             ========== -->
             <ul class="mt-5 w-full flex flex-col items-start justify-center gap-2">
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">Weapons</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">Weapons</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">Armor</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">Armor</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">Ninjutsu</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">Ninjutsu</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">Onmyo Magic</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">Onmyo Magic</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">Soul Cores</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">Soul Cores</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">Guardian Spirits</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">Guardian Spirits</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">Accessories</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">Accessories</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">Demon Parade Picture Scrolls</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">Demon Parade Picture Scrolls</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">Graces & Sets</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">Graces & Sets</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">Items</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">Items</a>
                 </li>
             </ul>
         </div>
@@ -394,25 +394,25 @@
             ========== -->
             <ul class="mt-5 w-full flex flex-col items-start justify-center gap-2">
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">Missions</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">Missions</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">Bosses</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">Bosses</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">Enemies</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">Enemies</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">The Underworld</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">The Underworld</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">The Depths of the Underworld</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">The Depths of the Underworld</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">Kodama & Sudama</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">Kodama & Sudama</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">Characters</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">Characters</a>
                 </li>
             </ul>
         </div>
@@ -434,25 +434,25 @@
             ========== -->
             <ul class="mt-5 w-full flex flex-col items-start justify-center gap-2">
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">Smithing Texts</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">Smithing Texts</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">Temper Tables</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">Temper Tables</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">Blacksmith</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">Blacksmith</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">Stone of Penance</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">Stone of Penance</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">Farming Resources</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">Farming Resources</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">Achievements</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="https://liukang1080.github.io/gamewiki/nioh2/tools/achievements/achievements.html">Achievements</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">Builds</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">Builds</a>
                 </li>
             </ul>
         </div>
@@ -474,19 +474,19 @@
             ========== -->
             <ul class="mt-5 w-full flex flex-col items-start justify-center gap-2">
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">Online Modes</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">Online Modes</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">Matchmaking</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">Matchmaking</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">Hidden Tea House</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">Hidden Tea House</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">Revenants</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">Revenants</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full   text-xl text-yellow-400" href="">Benevolent Graves</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">Benevolent Graves</a>
                 </li>
             </ul>
         </div>
