--- a/nioh2/tools/achievements/achievements.html
+++ b/nioh2/tools/achievements/achievements.html
@@ -410,10 +410,13 @@
                 <!-- Dream Within a Dream -->
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-3">
-                        <span></span>
-                        <img src="" alt="">
+                        <span>Dream Within a Dream</span>
+                        <img src="./img/dream_within_a_dream.png" alt="">
                     </div></td>
-                    <td></td>
+                    <td>
+                        Saw Tokichiro off on his final departure. Completed the Main Mission 
+                        <a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a>. 
+                    </td>
                 </tr>
 
                 <!-- Bold Wrangler -->
