--- a/nioh2/tools/achievements/achievements.html
+++ b/nioh2/tools/achievements/achievements.html
@@ -1227,6 +1227,18 @@
 
 
     <!-- ========== ========== ==========
+    The Tengu's Disciple (DLC 1) Achievements Table
+    ========== ========== ========== -->
+    <section id="dlc1" class="w-full my-12 lg:px-0 flex flex-col items-center">
+        <div class="w-full px-4 py-6 flex flex-col items-center gap-6 rounded
+            2xl:max-w-section-width lg:px-16">
+
+            
+        </div>
+    </section>
+
+
+    <!-- ========== ========== ==========
     Credits
     ========== ========== ========== -->
     <section class="w-full my-12 flex flex-col items-center">
