Added "The Tnegu;s Disciple / DLC 1" achievements table in achievements.html. Added the respective images in achievements/img/.

--- a/nioh2/tools/achievements/achievements.html
+++ b/nioh2/tools/achievements/achievements.html
@@ -279,9 +279,9 @@
     </section>
 
 
-    <!-- ========== ========== ==========
+    <!-- ========== ========== ========== ========== ========== 
     Base Game Achievements Table
-    ========== ========== ========== -->
+    ========== ========== ========== ========== ========== -->
     <section id="base" class="w-full my-12 lg:px-0 flex flex-col items-center">
         <div class="w-full px-4 py-6 flex flex-col items-center gap-6 rounded
             2xl:max-w-section-width lg:px-16">
@@ -289,7 +289,6 @@
             <!-- ==========
             section header
             ========== -->
-            <img src="./img/straight_sabre_logo.png" alt="">
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Base Game Achievements</h2>
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
@@ -301,18 +300,6 @@
                     <th>Achievement</th>
                     <th>Description</th>
                 </tr>
-
-                <!-- ========== ========== ========== ========== ========== 
-                TEMPLATE:
-
-                <tr class="even:bg-dark-gray-2">
-                    <td><div class="flex flex-col justify-center items-center gap-3">
-                        <span></span>
-                        <img src="" alt="">
-                    </div></td>
-                    <td></td>
-                </tr>
-                ========== ========== ========== ========== ========== -->
 
                 <!-- You Are Nioh / Platinum Trophy -->
                 <tr class="even:bg-dark-gray-2">
@@ -1001,58 +988,58 @@
 
                         <!-- Awakening Region -->
                         <h5 class="text-yellow-400 font-bold">Awakening Region:</h5>
-                        <ol class="list-disc list-inside flex flex-col gap-2">
+                        <ul class="list-disc list-inside flex flex-col gap-2">
                             <li><a class="text-sky-400 hover:text-sky-600" href="">Village of Cursed Blossoms</a> (1)</li>
                             <li><a class="text-sky-400 hover:text-sky-600" href="">The Beast Born of Smoke and Flames</a> (2)</li>
                             <li><a class="text-sky-400 hover:text-sky-600" href="">The Viper's Sanctum</a> (3)</li>
-                        </ol><br><br>
+                        </ul><br><br>
 
                         <!-- Soaring Region -->
                         <h5 class="text-yellow-400 font-bold">Soaring Region:</h5>
-                        <ol class="list-disc list-inside flex flex-col gap-2">
+                        <ul class="list-disc list-inside flex flex-col gap-2">
                             <li><a class="text-sky-400 hover:text-sky-600" href="">The Hidden Monsters of Okehazama</a> (2)</li>
                             <li><a class="text-sky-400 hover:text-sky-600" href="">The Mysterious One Night Castle</a> (3)</li>
                             <li><a class="text-sky-400 hover:text-sky-600" href="">The Hollow Fortress</a> (2)</li>
-                        </ol><br><br>
+                        </ul><br><br>
 
                         <!-- Shadow Region -->
                         <h5 class="text-yellow-400 font-bold">Shadow Region:</h5>
-                        <ol class="list-disc list-inside flex flex-col gap-2">
+                        <ul class="list-disc list-inside flex flex-col gap-2">
                             <li><a class="text-sky-400 hover:text-sky-600" href="">A Way Out</a> (3)</li>
                             <li><a class="text-sky-400 hover:text-sky-600" href="">Corpses and Ice</a> (3)</li>
                             <li><a class="text-sky-400 hover:text-sky-600" href="">Bird in a Cage</a> (3)</li>
-                        </ol><br><br>
+                        </ul><br><br>
 
                         <!-- Dawn Region -->
                         <h5 class="text-yellow-400 font-bold">Dawn Region:</h5>
-                        <ol class="list-disc list-inside flex flex-col gap-2">
+                        <ul class="list-disc list-inside flex flex-col gap-2">
                             <li><a class="text-sky-400 hover:text-sky-600" href="">Prevading Waters</a> (2)</li>
                             <li><a class="text-sky-400 hover:text-sky-600" href="">The Frenzied Blaze</a> (3)</li>
                             <li><a class="text-sky-400 hover:text-sky-600" href="">The Sun Sets on Mount Tenno</a> (3)</li>
-                        </ol><br><br>
+                        </ul><br><br>
 
                         <!-- Twilight Region -->
                         <h5 class="text-yellow-400 font-bold">Twilight Region:</h5>
-                        <ol class="list-disc list-inside flex flex-col gap-2">
+                        <ul class="list-disc list-inside flex flex-col gap-2">
                             <li><a class="text-sky-400 hover:text-sky-600" href="">Ruin Draws Near</a> (4)</li>
                             <li><a class="text-sky-400 hover:text-sky-600" href="">The Two Faces of Hospitality</a> (2)</li>
                             <li><a class="text-sky-400 hover:text-sky-600" href="">The High-Spirited Demon</a> (3)</li>
-                        </ol><br><br>
+                        </ul><br><br>
 
                         <!-- Dream Region -->
                         <h5 class="text-yellow-400 font-bold">Dream Region:</h5>
-                        <ol class="list-disc list-inside flex flex-col gap-2">
+                        <ul class="list-disc list-inside flex flex-col gap-2">
                             <li><a class="text-sky-400 hover:text-sky-600" href="">The Mausoleum of Evil</a> (2)</li>
                             <li><a class="text-sky-400 hover:text-sky-600" href="">The Golden Castle</a> (3)</li>
                             <li><a class="text-sky-400 hover:text-sky-600" href="">Cherry Blossom Viewing in Daigo</a> (1)</li>
-                        </ol><br><br>
+                        </ul><br><br>
 
                         <!-- Afterglow Region -->
                         <h5 class="text-yellow-400 font-bold">Afterglow Region</h5>
-                        <ol class="list-disc list-inside flex flex-col gap-2">
+                        <ul class="list-disc list-inside flex flex-col gap-2">
                             <li><a class="text-sky-400 hover:text-sky-600" href="">The Blue-Eyed Samurai</a> (0)</li>
                             <li><a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a> (3)</li>
-                        </ol>
+                        </ul>
                     </td>
                 </tr>
 
@@ -1226,14 +1213,192 @@
     </section>
 
 
-    <!-- ========== ========== ==========
+    <!-- ========== ========== ========== ========== ========== 
     The Tengu's Disciple (DLC 1) Achievements Table
-    ========== ========== ========== -->
+    ========== ========== ========== ========== ========== -->
     <section id="dlc1" class="w-full my-12 lg:px-0 flex flex-col items-center">
         <div class="w-full px-4 py-6 flex flex-col items-center gap-6 rounded
             2xl:max-w-section-width lg:px-16">
 
-            
+            <!-- ==========
+            section header
+            ========== -->
+            <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">The Tengu's Disciple (DLC 1) Achievements</h2>
+            <hr class="w-full h-[2px] bg-stone-600 border-0">
+
+            <table class="bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+                <!-- ==========
+                Header 
+                ========== -->
+                <tr>
+                    <th>Achievement</th>
+                    <th>Description</th>
+                </tr>
+
+                <!-- ========== ========== ========== ========== ========== 
+                TEMPLATE:
+
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-3">
+                        <span></span>
+                        <img src="" alt="">
+                    </div></td>
+                    <td></td>
+                </tr>
+                ========== ========== ========== ========== ========== -->
+
+                <!-- A Kindred Light -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-3">
+                        <span>A Kindred Light</span>
+                        <img src="./img/a_kindred_light.png" alt="">
+                    </div></td>
+                    <td>
+                        Completed the main mission: <a class="text-sky-400 hover:text-sky-600" href="">A Song to Calm the Storm</a>.
+                    </td>
+                </tr>
+
+                <!-- The Will to Fight -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-3">
+                        <span>The Will to Fight</span>
+                        <img src="./img/the_will_to_fight.png" alt="">
+                    </div></td>
+                    <td>
+                        Completed the main mission: <a class="text-sky-400 hover:text-sky-600" href="">Eternal Rivals</a>.
+                    </td>
+                </tr>
+
+                <!-- Casting Out the Shadows -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-3">
+                        <span>Casting Out the Shadows</span>
+                        <img src="./img/casting_out_the_shadows.png" alt="">
+                    </div></td>
+                    <td>
+                        Completed the sub mission: <a class="text-sky-400 hover:text-sky-600" href="">Shadows Creep in Kurama</a>.
+                    </td>
+                </tr>
+
+                <!-- Poetry in Motion -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-3">
+                        <span>Poetry in Motion</span>
+                        <img src="./img/poetry_in_motion.png" alt="">
+                    </div></td>
+                    <td>
+                        Collected all of Saigyo's poetry cards. There are a total of 3 poetry cards, you need to find all 3 to
+                        get the achievement. 
+                        <br><br>
+
+                        <ul class="list-disc list-inside flex flex-col gap-4 text-left">
+                            <li>
+                                The first poetry card is located in the main mission: 
+                                <a class="text-sky-400 hover:text-sky-600" href="">A Song to Calm the Storm</a>,
+                                before the first boss fight. It is located in the camp with a large 
+                                <a class="text-sky-400 hover:text-sky-600" href="">Bakegani</a> hidden in the sand.
+                            </li>
+                            <li>
+                                The second poetry card is located in the main mission: 
+                                <a class="text-sky-400 hover:text-sky-600" href="">Eternal Rivals</a>. Before reaching the last
+                                shrine you will encounter <a class="text-sky-400 hover:text-sky-600" href="">Mezuki</a>, kill it
+                                and loot the corpse next to it.
+                            </li>
+                            <li>
+                                The third poetry card is located in the sub mission:
+                                <a class="text-sky-400 hover:text-sky-600" href="">Shadows Creep in Kurama</a>. Before reaching 
+                                the last shrine there is a ladder you can climb, stick to the left side and you can collect the item. 
+                                (Placed in the house with a Yokai Cloud.)
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+
+                <!-- Sundering Arrows -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-3">
+                        <span>Sundering Arrows</span>
+                        <img src="./img/sundering_arrows.png" alt="">
+                    </div></td>
+                    <td>
+                        Used all of the giant arrows in the main mission: 
+                        <a class="text-sky-400 hover:text-sky-600" href="">A Song to Calm the Storm</a>. There are a total of 3
+                        giant arrows. You must find the first 2 before fighting 
+                        <a class="text-sky-400 hover:text-sky-600" href="">Benkei</a>.
+                    </td>
+                </tr>
+
+                <!-- Heretical Glow -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-3">
+                        <span>Heretical Glow</span>
+                        <img src="./img/heretical_glow.png" alt="">
+                    </div></td>
+                    <td>
+                        Destroyed 150 of the Golden Amrita shards found in the gold mine in the main mission:
+                        <a class="text-sky-400 hover:text-sky-600" href="">Eternal Rivals</a>.
+                    </td>
+                </tr>
+
+                <!-- Tengu Crusher -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-3">
+                        <span>Tengu Crusher</span>
+                        <img src="./img/tengu_crusher.png" alt="">
+                    </div></td>
+                    <td>
+                        Used an attack to knock <a class="text-sky-400 hover:text-sky-600" href="">Minomoto no Yoshitsune</a> 
+                        off his perch on the bridge in the main mission: <a class="text-sky-400 hover:text-sky-600" href="">Eternal Rivals</a>.
+                    </td>
+                </tr>
+
+                <!-- Demonic Parade-Goer -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-3">
+                        <span>Demonic Parade-Goer</span>
+                        <img src="./img/demonic_parade_goer.png" alt="">
+                    </div></td>
+                    <td>
+                        Completed Demon Parade Picture Scroll missions 10 times.
+                    </td>
+                </tr>
+
+                <!-- Kodama General -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-3">
+                        <span>Kodama General</span>
+                        <img src="./img/kodama_general.png" alt="">
+                    </div></td>
+                    <td>
+                        Collect all Kodama in The Tengu's Disciple (DLC 1). There are a total of 25 Kodama.
+                        <br><br>
+
+                        <ul class="list-disc list-inside flex flex-col gap-2">
+                            <li><a class="text-sky-400 hover:text-sky-600" href="">A Song to Calm the Storm</a> (10)</li>
+                            <li><a class="text-sky-400 hover:text-sky-600" href="">Shadows Creep in Kurama</a> (6)</li>
+                            <li><a class="text-sky-400 hover:text-sky-600" href="">Eternal Rivals</a> (9)</li>
+                        </ul>
+                    </td>
+                </tr>
+
+                <!-- Spa Addict -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-3">
+                        <span>Spa Addict</span>
+                        <img src="./img/spa_addict.png" alt="">
+                    </div></td>
+                    <td>
+                        Bathed in every Hot Spring found in The Tengu's Disciple (DLC 1). There are a total of 3 Hot Springs.
+                        <br><br>
+
+                        <ul class="list-disc list-inside flex flex-col gap-2">
+                            <li><a class="text-sky-400 hover:text-sky-600" href="">A Song to Calm the Storm</a> (1)</li>
+                            <li><a class="text-sky-400 hover:text-sky-600" href="">Shadows Creep in Kurama</a> (1)</li>
+                            <li><a class="text-sky-400 hover:text-sky-600" href="">Eternal Rivals</a> (1)</li>
+                        </ul>
+                    </td>
+                </tr>
+            </table>
         </div>
     </section>
 
