Added full resolution images for the achievements for testing in achievements.html.

--- a/wolong/combat/martial_arts/temp.html
+++ b/wolong/combat/martial_arts/temp.html
@@ -332,7 +332,7 @@
                 <!-- ==========
                 card 2
                 ========== -->
-                <div class="w-full p-3 flex flex-col items-center gap-4 rounded bg-dark-gray text-2xl">
+                <a class="group w-full p-3 flex flex-col items-center gap-4 rounded bg-dark-gray text-2xl" href="">
                     <!-- image -->
                     <img src="../../equipment/divine_beasts/img/qinglong_large.png" alt="">
 
@@ -340,7 +340,7 @@
                     <div class="mask w-full p-1 flex flex-col items-center gap-4 bg-dark-gray-2 rounded text-slate-300">
                         <!-- name -->
                         <div class="w-full flex flex-col items-center">
-                            <span class="font-bold text-boss-skill">Drifting Cloud</span>
+                            <span class="group-hover:text-sky-600 font-bold text-boss-skill">Drifting Cloud</span>
                             <hr class="w-full h-[2px] bg-stone-900 border-0">
                         </div>
 
@@ -354,7 +354,7 @@
                             Swiftly swing your weapon upward and jump back.
                         </p>
                     </div>
-                </div>
+                </a>
 
                 <!-- ==========
                 card 2
