--- a/nioh2/tools/achievements/achievements.html
+++ b/nioh2/tools/achievements/achievements.html
@@ -309,6 +309,27 @@
                     </div></td>
                     <td><span class="text-red-600 font-bold">[Platinum Trophy]</span> You have unlocked all Achievements!</td>
                 </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-3">
+                        <span class="w-full flex justify-center">You Are Nioh</span>
+                        <div class="w-[128px] h-[128px]"><img class="object-contain" src="./img/you_are_nioh_BIG.png" alt=""></div>
+                    </div></td>
+                    <td><span class="text-red-600 font-bold">[Platinum Trophy]</span> You have unlocked all Achievements!</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-3">
+                        <span class="w-full flex justify-center">You Are Nioh</span>
+                        <img class="w-[96px] h-[96px] object-contain" src="./img/you_are_nioh_BIG.png" alt="">
+                    </div></td>
+                    <td><span class="text-red-600 font-bold">[Platinum Trophy]</span> You have unlocked all Achievements!</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-3">
+                        <span class="w-full flex justify-center">You Are Nioh</span>
+                        <img src="./img/you_are_nioh_BIG.png" alt="">
+                    </div></td>
+                    <td><span class="text-red-600 font-bold">[Platinum Trophy]</span> You have unlocked all Achievements!</td>
+                </tr>
 
                 <!-- Dawn of a Dream -->
                 <tr class="even:bg-dark-gray-2">
