Updated the dual sowrd master image in achievements.html.

--- a/nioh2/tools/achievements/achievements.html
+++ b/nioh2/tools/achievements/achievements.html
@@ -836,7 +836,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-3">
                         <span>Dual Sword Master</span>
-                        <img class="w-[96px] h-[96px] object-contain" src="./img/dual_swords_master.png" alt="">
+                        <img class="w-[96px] h-[96px] object-contain" src="./img/dual_sword_master.png" alt="">
                     </div></td>
                     <td>
                         Acquired a Mystic Art for the Dual Swords.
