Added more text to the Stone of Penance description in achievements.html.

--- a/nioh2/tools/achievements/achievements.html
+++ b/nioh2/tools/achievements/achievements.html
@@ -1515,7 +1515,8 @@
                     <td>
                         Attained 100% Penitence on a Stone of Penance. You can acquire a Stone of Penance by going to Shrine
                         &#10230 Stone of Penance &#10230 offer any item to recieve a Stone of Penance. Charge the Stone by
-                        killing enemies. When the Stone is active all enemies become stronger.
+                        killing enemies. When the Stone is active all enemies become stronger. Must be on Dream of the Strong 
+                        (NG+) or higher.
                     </td>
                 </tr>
                 
